// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule 6 party statement valid GET /allocation-check should render the allocation check page with expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Allocation level</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Do you need to update the allocation level and specialisms?</legend>
                                <div                                 class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="allocationLevelAndSpecialisms"
                                        name="allocationLevelAndSpecialisms" type="radio" value="yes">
                                        <label class="govuk-label govuk-radios__label" for="allocationLevelAndSpecialisms">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="allocationLevelAndSpecialisms-2"
                                        name="allocationLevelAndSpecialisms" type="radio" value="no">
                                        <label class="govuk-label govuk-radios__label" for="allocationLevelAndSpecialisms-2">No</label>
                                    </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`rule 6 party statement valid GET /allocation-level should render the allocation level page with expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Allocation level</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="allocationLevel" name="allocationLevel"
                                    type="radio" value="A">
                                    <label class="govuk-label govuk-radios__label" for="allocationLevel">A</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="allocationLevel-2" name="allocationLevel"
                                    type="radio" value="B">
                                    <label class="govuk-label govuk-radios__label" for="allocationLevel-2">B</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`rule 6 party statement valid GET /allocation-specialisms should render the allocation specialisms page with expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Allocation specialisms</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                                <div class="govuk-checkboxes__item">
                                    <input class="govuk-checkboxes__input" id="allocationSpecialisms" name="allocationSpecialisms"
                                    type="checkbox" value="1">
                                    <label class="govuk-label govuk-checkboxes__label" for="allocationSpecialisms">Specialism 1</label>
                                </div>
                                <div class="govuk-checkboxes__item">
                                    <input class="govuk-checkboxes__input" id="allocationSpecialisms-2" name="allocationSpecialisms"
                                    type="checkbox" value="2">
                                    <label class="govuk-label govuk-checkboxes__label" for="allocationSpecialisms-2">Specialism 2</label>
                                </div>
                                <div class="govuk-checkboxes__item">
                                    <input class="govuk-checkboxes__input" id="allocationSpecialisms-3" name="allocationSpecialisms"
                                    type="checkbox" value="3">
                                    <label class="govuk-label govuk-checkboxes__label" for="allocationSpecialisms-3">Specialism 3</label>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`rule 6 party statement valid GET /confirm should render the confirm page with expected content including the party name in the title 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and accept Test Organisation statement</h1>
        </div>
    </div>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Statement</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Statement" data-mode="html">Every single thing in the world has its own personality - and it is up
                    to you to make friends with the little rascals. Steve wants reflections,
                    so let&#39;s give him eflections It&#39;s amazing what you can do with
                    a little love in your heart. Clouds are free they come and go as they please.
                    <br>
                    <br>The secret to doing anything is believing that you can do it. Anything
                    hatyou believe you can do strong enough, you can do. Anything. As long
                    as you believe. It looks so good, I might as well not stop. This present
                    moment is perfect simply due to the fact you&#39;re xperiencingit. Making
                    all those little fluffies that live in the clouds.
                    <br>
                    <br>You don&#39;t want to kill all your dark areas they are very important.
                    I will take some magic white, and a little bit of andykebrown and a little
                    touch of yellow. Anyone can paint. Each highlight must have it&#39;s own
                    private shadow. Don&#39;t fiddle with it all day.</div>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/rule-6-party-statement/99/redact">Redact<span class="govuk-visually-hidden"> Redact statement</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/rule-6-party-statement/99/add-document?backUrl=/rule-6-party-statement/99/valid/confirm">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decision</dt>
            <dd class="govuk-summary-list__value">Accept statement</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/rule-6-party-statement/99">Change<span class="govuk-visually-hidden"> review decision</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you need to update the allocation level and specialisms?</dt>
            <dd             class="govuk-summary-list__value">No</dd>
                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/rule-6-party-statement/99/valid/allocation-check">Change<span class="govuk-visually-hidden"> allocation level and specialisms</span></a>
                </dd>
        </div>
    </dl>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="post" novalidate="novalidate">
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Accept statement</button>
            </form>
        </div>
    </div>
</main>"
`;
